// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unit Test: FormatForm  should render properly:  should render properly with common props 1`] = `
Array [
  <div
    className="a10SlidingPageContent"
  >
    <div
      className="a10SlidingPageTitle"
    >
      Common Unit Test
    </div>
    <div
      className="a10SlidingPageDescription"
    >
      This is a common Unit Test
    </div>
    <p>
      Inner Component
    </p>
  </div>,
  <div
    className="a10SlidingPageFooter"
  >
    <button
      className="ant-btn submit-button ant-btn-primary"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <span>
        Save
      </span>
    </button>
    <button
      className="ant-btn cancel-button"
      onClick={[Function]}
      type="button"
    >
      <span>
        Cancel
      </span>
    </button>
  </div>,
]
`;

exports[`Unit Test: FormatForm  should render properly:  should render properly with min props 1`] = `
Array [
  <div
    className="a10SlidingPageContent"
  >
    <div
      className="a10SlidingPageTitle"
    />
    <div
      className="a10SlidingPageDescription"
    />
    <p>
      Inner Component
    </p>
  </div>,
  <div
    className="a10SlidingPageFooter"
  >
    <button
      className="ant-btn submit-button ant-btn-primary"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      <span>
        Save
      </span>
    </button>
    <button
      className="ant-btn cancel-button"
      onClick={[Function]}
      type="button"
    >
      <span>
        Cancel
      </span>
    </button>
  </div>,
]
`;

exports[`Unit Test: FormatForm  should render properly:  should render properly with special props 1`] = `
Array [
  <div
    className="a10SlidingPageContent"
  >
    <div
      className="a10SlidingPageTitle"
    >
      Special Unit Test
    </div>
    <div
      className="a10SlidingPageDescription"
    >
      This is a special Unit Test
    </div>
    <p>
      Inner Component
    </p>
  </div>,
  <div
    className="a10SlidingPageFooter"
  >
    <a
      className="back-link"
      onClick={[Function]}
    >
      <i
        className="anticon anticon-double-left"
        style={Object {}}
      >
        <svg
          aria-hidden="true"
          className=""
          data-icon="double-left"
          fill="currentColor"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M272.9 512l265.4-339.1c4.1-5.2.4-12.9-6.3-12.9h-77.3c-4.9 0-9.6 2.3-12.6 6.1L186.8 492.3a31.99 31.99 0 0 0 0 39.5l255.3 326.1c3 3.9 7.7 6.1 12.6 6.1H532c6.7 0 10.4-7.7 6.3-12.9L272.9 512zm304 0l265.4-339.1c4.1-5.2.4-12.9-6.3-12.9h-77.3c-4.9 0-9.6 2.3-12.6 6.1L490.8 492.3a31.99 31.99 0 0 0 0 39.5l255.3 326.1c3 3.9 7.7 6.1 12.6 6.1H836c6.7 0 10.4-7.7 6.3-12.9L576.9 512z"
          />
        </svg>
      </i>
       Back
    </a>
    <button
      className="ant-btn submit-button ant-btn-primary"
      disabled={true}
      onClick={[Function]}
      type="button"
    >
      <span>
        TestSave
      </span>
    </button>
    <button>
      Customized
    </button>
  </div>,
]
`;
